# SMAIL-

./: LICENSE  README.md
.github/workflows/: python-publish.yml
sconf/: config.json  pyproject.toml
sconf/src/sconf/configuration/models/: smail_configuration.py
sconf/src/sconf/ui/convertors/: value_convertors.py
sconf/src/sconf/ui/styles/: global_style_sheets.py
smail/: README.md  pyproject.toml  requirements.txt
smail/src/smail/: __main__.py  layout.py  security_settings_view.py  smail_confview.py  smail_settings_view.py  style.py  visual_settings_view.py
